# gz_arm

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build_and_test.yaml
include/gz_arm/: aruco_detect.hpp  gz_arm_control.hpp  gz_arm_util.hpp
launch/: gz_arm_launch.py  gz_sim_launch.py
resources/: gz_arm.rviz  gz_arm.xacro.sdf  gz_arm.xacro.urdf  joint_controller_velocity.yaml
scripts/: calc_inertia.py  gen_aruco.py
src/: aruco_detect.cpp  gz_arm_control.cpp  gz_arm_exec.cpp  gz_arm_util.cpp  gz_cam_sub.cpp
test/: gz_arm_util_test.cpp
